--- a/Index.html
+++ b/Index.html
@@ -435,11 +435,11 @@
     <div class="bg-info row">
       <div class="col-lg-offset-1 col-md-5">
         <p class="m-y-1 p-y-1 text-center text-xs-center">
-          <b>Zhukov Alexander</b>
+          <b>Zhukov Alexander</b><br><b> Vladislav Saburov</b>
           <br>South West State University
           <br>Russia, Kursk
           <br>
-          <abbr title="Phone" class="p-y-1">PO-31b</abbr>
+          <abbr title="Group" class="p-y-1">PO-71m</abbr>
         </p>
       </div>
       <div class="col-md-6 ">
